# zpatial

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: mod.rs
lib/implement/: bvh.rs  bvh_median.rs  mat.rs  mod.rs
lib/interface/: i_cluster.rs  i_shape.rs  i_spatial_accel.rs  i_stat.rs  i_stat_tree.rs  mod.rs
lib/tests/: bound.rs  bvh.rs  bvh_median.rs  mod.rs
