[package]
name = "zpatial"
version = "0.1.1"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
description = "Algorithms for Spatial Acceleration and Geometries."
repository = "https://github.com/clearlycloudy/zpatial/"
keywords = [ "zpatial", "spatial" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/zpatial/0.1.1/zpatial/"
readme = "README.md"

[dependencies]
# num = "0.1.41"
mazth = "0.1.0"
pretty_env_logger = "0.2.0"
log = "0.4.1"
rand = "*"
chrono = "0.4"

[lib]
name = "zpatial"
path = "lib/mod.rs"